--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lily+Script+One&display=swap');
 @import "tailwindcss";
 
 body {
@@ -113,4 +114,8 @@ body {
 
 .font-playfair {
   font-family: "Playfair Display", serif;
+}
+
+.font-lily {
+  font-family: "Lily Script One", system-ui;
 }
